Sarath.sfp_Dev_Org/src/objects/Document_Generation__c.object
<CustomObject>
    <description>Object will store the fields required for document process.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Field will store the account number populated from opportunity</description>
        <inlineHelpText>Field will store the account number populated from opportunity</inlineHelpText>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Authorised_Signatory_Name__c</fullName>
        <label>Authorised Signatory Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Activity__c</fullName>
        <label>Business Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_Name__c</fullName>
        <label>Con Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employees__c</fullName>
        <label>Current Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <description>This field will hold the customer email</description>
        <inlineHelpText>This field will hold the customer email</inlineHelpText>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Fax__c</fullName>
        <description>This field will store the Customer fax</description>
        <inlineHelpText>This field will store the Customer fax</inlineHelpText>
        <label>Customer Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>This field will hold the name of the customer</description>
        <inlineHelpText>This field will hold the name of the customer</inlineHelpText>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <description>This field will hold the value of the customer phone</description>
        <inlineHelpText>This field will hold the value of the customer phone</inlineHelpText>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_type__c</fullName>
        <label>Entity type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Type__c</fullName>
        <label>Firm Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Non-Financial</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Partner__c</fullName>
        <label>General Partner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_Partner__c</fullName>
        <label>Limited Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will hold the opportunity value</description>
        <inlineHelpText>This field will hold the opportunity value</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Document_Generation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_User_Email__c</fullName>
        <label>Portal User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_User_First_Name__c</fullName>
        <label>Portal User First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_User_Last_Name__c</fullName>
        <label>Portal User Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_User_Phone_No__c</fullName>
        <label>Portal User Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rating_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rating Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not verified</fullName>
                </value>
                <value>
                    <fullName>More Information required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trading_Name__c</fullName>
        <label>Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_beneficial_owner__c</fullName>
        <label>Ultimate beneficial owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Forms</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Document Generation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>